# LinCulator

./: .gitignore  CMakeLists.txt  README.md
include/LinCulator/: Classes.h
lib/: Classes.h  Fraction.cpp  Matrix.cpp  MyNamespace.cpp
src/: Fraction.cpp  Jordan_Form.cpp  LinCulator.cpp  Matrix.cpp  MyNamespace.cpp
